get /users request modified to process requests with Pageable parameter. All requests modified to process logically deleted users. EntityGraph added
